--- a/package.json
+++ b/package.json
@@ -9,13 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "11.6.0",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "11.4.0",
+    "@emotion/styled": "^11.10.5",
+    "@mui/lab": "^5.0.0-alpha.110",
+    "@mui/material": "^5.10.16",
+    "apexcharts": "^3.23.1",
     "crypto-js": "^4.1.1",
+    "feather-icons-react": "^0.6.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
     "next": "12.3.1",
     "nodemailer": "^6.8.0",
     "paytmchecksum": "^1.5.0",
     "react": "18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-toastify": "^9.1.1",
